git-svn-id: svn://jmedu.wassecurity.net/BrightEdu/trunk@68 9987ea41-4527-47ae-bde9-3645be3cca0f

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=DEBUG, stdout, RX
+log4j.rootCategory=INFO, stdout, RX
 
 log4j.logger.com.mchange.v2.c3p0.impl=INFO
 log4j.logger.com.mchange=INFO
