--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,10 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/smartgwt.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/postgresql-9.1-901.jdbc4.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/mybatis-3.0.6.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/axis-1.3.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/axis-jaxrpc-1.3.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-discovery-0.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/wsdl4j-1.5.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
