git-svn-id: svn://jmedu.wassecurity.net/BrightEdu/trunk@107 9987ea41-4527-47ae-bde9-3645be3cca0f

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -26,5 +26,13 @@
   <welcome-file-list>
     <welcome-file>BrightEdu.html</welcome-file>
   </welcome-file-list>
+  <servlet>
+  	<servlet-name>DataBaseRPC</servlet-name>
+  	<servlet-class>com.brightedu.server.DataBaseRPCImpl</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>DataBaseRPC</servlet-name>
+  	<url-pattern>/brightedu/DataBaseRPC</url-pattern>
+  </servlet-mapping>
 
 </web-app>
