--- a/.classpath
+++ b/.classpath
@@ -17,6 +17,7 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/wsdl4j-1.5.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/activation-1.1.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/mail-1.4.4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/TrustPayClient-V2.0.8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
