--- a/.classpath
+++ b/.classpath
@@ -18,6 +18,9 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/activation-1.1.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/mail-1.4.4.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/TrustPayClient-V2.0.8.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/mybatis-generator-core-1.3.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-fileupload-1.2.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/poi-3.8-beta5-20111217.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
