git-svn-id: svn://jmedu.wassecurity.net/BrightEdu/trunk@430 9987ea41-4527-47ae-bde9-3645be3cca0f

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -70,6 +70,8 @@
 		<url-pattern>/brightedu/CallbackServlet</url-pattern>
 	</servlet-mapping>
 
+
+    <!-- EventServiceImpl 和 MessageService 是消息server push机制必须的-->
 	<servlet>
 		<servlet-name>EventServiceImpl</servlet-name>
 		<servlet-class>de.novanic.eventservice.service.EventServiceImpl</servlet-class>
