git-svn-id: svn://jmedu.wassecurity.net/BrightEdu/trunk@462 9987ea41-4527-47ae-bde9-3645be3cca0f

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -92,4 +92,9 @@
 		<url-pattern>/brightedu/MessageService</url-pattern>
 	</servlet-mapping>
 
+
+    <listener>
+    	<description>session listener</description>
+    	<listener-class>com.brightedu.server.UserSessionListener</listener-class>
+    </listener>
 </web-app>
