--- a/.classpath
+++ b/.classpath
@@ -21,6 +21,17 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/mybatis-generator-core-1.3.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-fileupload-1.2.2.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/poi-3.8-beta5-20111217.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/eventservice-1.2.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/eventservice-rpc-1.2.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gwteventservice-1.2.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/httpclient-4.1.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/httpclient-cache-4.1.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/httpcore-4.1.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/httpmime-4.1.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jai_codec.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jai_core.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/mlibwrapper_jai.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gwtupload-0.6.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
