--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -101,19 +101,19 @@
 	<context-param>
 		<!-- max size of the upload request -->
 		<param-name>maxSize</param-name>
-		<param-value>3145728</param-value>
+		<param-value>31457280</param-value>
 	</context-param>
 	<context-param>
 		<!-- Useful in development mode to slow down the uploads in fast networks. 
 			Put the number of milliseconds to sleep in each block received in the server. 
 			false or 0, means don't use slow uploads -->
 		<param-name>slowUploads</param-name>
-		<param-value>10</param-value>
+		<param-value>0</param-value>
 	</context-param>
 	<servlet>
 		<servlet-name>uploadServlet</servlet-name>
-		<!-- This is the default servlet, it puts files in session -->
-		<servlet-class>gwtupload.server.UploadServlet</servlet-class>
+		
+		<servlet-class>com.brightedu.server.util.ExcelParserServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>uploadServlet</servlet-name>
