git-svn-id: svn://jmedu.wassecurity.net/BrightEdu/trunk@529 9987ea41-4527-47ae-bde9-3645be3cca0f

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -4,15 +4,21 @@ log4j.logger.com.mchange.v2.c3p0.impl=INFO
 log4j.logger.com.mchange=INFO
 
 #mybatis log level update
-log4j.logger.java.sql.ResultSet=INFO 
+
 log4j.logger.org.apache=INFO 
-log4j.logger.java.sql.Connection=INFO 
-log4j.logger.java.sql.Statement=INFO 
-log4j.logger.java.sql.PreparedStatement=INFO
+
+#log4j.logger.java.sql.ResultSet=INFO 
+#log4j.logger.java.sql.Connection=INFO 
+#log4j.logger.java.sql.Statement=INFO 
+#log4j.logger.java.sql.PreparedStatement=INFO
+
+
+log4j.logger.com.brightedu.util.LogTest=DEBUG
+log4j.logger.com.brightedu.server.util.ServerProperties=DEBUG
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%p] %-d{yyyy-MM-dd HH:mm:ss} %m %l%n
+log4j.appender.stdout.layout.ConversionPattern=[%p] %-d{yyyy-MM-dd HH:mm:ss} %m | %l%n
 
 
 log4j.appender.RX=org.apache.log4j.RollingFileAppender
@@ -20,4 +26,4 @@ log4j.appender.RX.File=logs/enroll.log
 log4j.appender.RX.MaxFileSize=2048KB
 log4j.appender.RX.MaxBackupIndex=10
 log4j.appender.RX.layout=org.apache.log4j.PatternLayout
-log4j.appender.RX.layout.ConversionPattern=[%p] %-d{yyyy-MM-dd HH:mm:ss} %m %l%n
+log4j.appender.RX.layout.ConversionPattern=[%p] %-d{yyyy-MM-dd HH:mm:ss} %m | %l%n
