git-svn-id: svn://jmedu.wassecurity.net/BrightEdu/trunk@530 9987ea41-4527-47ae-bde9-3645be3cca0f

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -4,17 +4,13 @@ log4j.logger.com.mchange.v2.c3p0.impl=INFO
 log4j.logger.com.mchange=INFO
 
 #mybatis log level update
-
-log4j.logger.org.apache=INFO 
-
-#log4j.logger.java.sql.ResultSet=INFO 
-#log4j.logger.java.sql.Connection=INFO 
-#log4j.logger.java.sql.Statement=INFO 
-#log4j.logger.java.sql.PreparedStatement=INFO
+log4j.logger.org.apache.ibatis=INFO 
+#JSP engine
+log4j.logger.org.apache.jasper=INFO 
 
 
-log4j.logger.com.brightedu.util.LogTest=DEBUG
-log4j.logger.com.brightedu.server.util.ServerProperties=DEBUG
+#Customized package and classes level
+#log4j.logger.com.brightedu.server.util.ServerProperties=DEBUG
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
