git-svn-id: svn://jmedu.wassecurity.net/BrightEdu/trunk@531 9987ea41-4527-47ae-bde9-3645be3cca0f

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -4,9 +4,13 @@ log4j.logger.com.mchange.v2.c3p0.impl=INFO
 log4j.logger.com.mchange=INFO
 
 #mybatis log level update
-log4j.logger.org.apache.ibatis=INFO 
+log4j.logger.org.apache.ibatis=INFO
+log4j.logger.java.sql.ResultSet=INFO 
+log4j.logger.java.sql.Connection=INFO 
+log4j.logger.java.sql.Statement=INFO 
+log4j.logger.java.sql.PreparedStatement=INFO
 #JSP engine
-log4j.logger.org.apache.jasper=INFO 
+log4j.logger.org.apache.jasper=INFO
 
 
 #Customized package and classes level
